--- a/news.html
+++ b/news.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create a website for free</a></section><section class="cid-rKpyzc670f" id="image3-4u">
+<section class="engine"><a href="https://mobirise.info/h">create a web page for free</a></section><section class="cid-rKpyzc670f" id="image3-4u">
 
     
 
