--- a/отзывы.html
+++ b/отзывы.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple website maker</a></section><section class="header1 cid-rog5cfv25E" id="header16-9">
+<section class="engine"><a href="https://mobirise.info/d">free web maker</a></section><section class="header1 cid-rog5cfv25E" id="header16-9">
 
     
 
@@ -89,7 +89,7 @@
     <div class="container">
         <div class="inner-container" style="width: 100%;">
             <hr class="line" style="width: 25%;">
-            <div class="section-text align-center mbr-fonts-style display-5">Геннадий Гуровский:<div>Неделя прошлая выдалась физически насыщенная.</div><div>На даче у родителей садили картошку и решили построить беседку.</div><div>Прямо с нуля из своего материала.</div><div><span style="font-size: 1.5rem;">Очень помогла True Aqua.</span><br></div><div>2 раза в день PH-Баланс! И прямо чувствуется, как прибавляются силы после приема.</div><div><span style="font-size: 1.5rem;">ИмунСелл - после обеда.</span><br></div><div>Сорбио Детокс вечером.</div><div>И это в комплексе с нашими БАД и TrueShake, конечно.</div><div>Организму моему очень нравится!</div><div><span style="font-size: 1.5rem;">В конце дня чувствуешь приятную усталость, а утром снова, как огурчик - готов к работе.</span><br></div><div>Я влюбился в True Aqua!</div><div>Теперь даже не знаю, что на первом месте: БАД, True Aqua или TrueShake.</div><div>Он все номер 1!</div><div><span style="font-size: 1.5rem;">За пять дней беседка стоит.</span><br></div><div>Соседи в удивлении "Я тоже такую же хочу!"</div></div>
+            <div class="section-text align-center mbr-fonts-style display-5">Интересная история:<br>Муж не разрешал жене покупать не знакомую ему продукцию AGenYZ. <br>Она это сделала втайне в итоге. <br> Через какое то время муж у жены спрашивает: ты что ботокс вколола? Почему у тебя лицо разгладилось? <br>Пришлось жене сознаться. В итоге сейчас  едят БАД вдвоем .<br><br><br>Геннадий Гуровский:<div>Неделя прошлая выдалась физически насыщенная.</div><div>На даче у родителей садили картошку и решили построить беседку.</div><div>Прямо с нуля из своего материала.</div><div><span style="font-size: 1.5rem;">Очень помогла True Aqua.</span><br></div><div>2 раза в день PH-Баланс! И прямо чувствуется, как прибавляются силы после приема.</div><div><span style="font-size: 1.5rem;">ИмунСелл - после обеда.</span><br></div><div>Сорбио Детокс вечером.</div><div>И это в комплексе с нашими БАД и TrueShake, конечно.</div><div>Организму моему очень нравится!</div><div><span style="font-size: 1.5rem;">В конце дня чувствуешь приятную усталость, а утром снова, как огурчик - готов к работе.</span><br></div><div>Я влюбился в True Aqua!</div><div>Теперь даже не знаю, что на первом месте: БАД, True Aqua или TrueShake.</div><div>Он все номер 1!</div><div><span style="font-size: 1.5rem;">За пять дней беседка стоит.</span><br></div><div>Соседи в удивлении "Я тоже такую же хочу!"</div></div>
             <hr class="line" style="width: 25%;">
         </div>
         </div>
