create github pages

--- a/маркетинг-план.html
+++ b/маркетинг-план.html
@@ -45,7 +45,7 @@
                          <a href="регистрация.html"><img src="assets/images/agenyz-164x70.png" alt="Mobirise" title="" style="height: 4.2rem;"></a>
                     
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="регистрация.html" target="_blank">Alfa-team</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="регистрация.html" target="_blank"></a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
