--- a/CellElixir.html
+++ b/CellElixir.html
@@ -45,7 +45,7 @@
                          <a href="регистрация.html"><img src="assets/images/agenyz-164x70.png" alt="Mobirise" title="" style="height: 4.2rem;"></a>
                     
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="регистрация.html" target="_blank">Alfa-team</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="регистрация.html" target="_blank"></a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create a site</a></section><section class="features3 cid-roHVoe1kQN" id="features3-g">
+<section class="engine"><a href="https://mobirise.info/m">website design templates</a></section><section class="features3 cid-roHVoe1kQN" id="features3-g">
 
     
 
