--- a/product.html
+++ b/product.html
@@ -45,7 +45,7 @@
                          <a href="регистрация.html"><img src="assets/images/agenyz-164x70.png" alt="Mobirise" title="" style="height: 4.2rem;"></a>
                     
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="регистрация.html" target="_blank">Alfa-team</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="регистрация.html" target="_blank"></a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -62,7 +62,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.info/b">how to create a site</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
