--- a/product.html
+++ b/product.html
@@ -45,7 +45,7 @@
                          <a href="регистрация.html"><img src="assets/images/agenyz-164x70.png" alt="Mobirise" title="" style="height: 4.2rem;"></a>
                     
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="регистрация.html" target="_blank"></a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="регистрация.html" target="_blank">Alfa-team</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -53,7 +53,7 @@
                     <a class="nav-link link text-white display-7" href="home.html">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
                         Главная</a>
-                </li><li class="nav-item"><a class="nav-link link text-white display-7" href="биохакинг.html" aria-expanded="false">Биохакинг</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-white display-7" href="/product.html" data-toggle="dropdown-submenu" aria-expanded="false">
+                </li><li class="nav-item"><a class="nav-link link text-white display-7" href="биохакинг.html" aria-expanded="false">Биохакинг</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle text-white display-7" href="/product.html" data-toggle="dropdown-submenu" aria-expanded="true">
                         Продукция</a><div class="dropdown-menu"><a class="dropdown-item text-white display-7" href="CellElixir.html">Cell-Эликсиры</a><a class="dropdown-item text-white display-7" href="TrueShake.html" aria-expanded="false">Коктейли True Shake</a><a class="dropdown-item text-white display-7" href="TrueAqua.html" aria-expanded="false">Умная вода&nbsp;True Aqua</a><a class="dropdown-item text-white display-7" href="отзывы.html" aria-expanded="false">Отзывы о продукции&nbsp;</a></div></li><li class="nav-item"><a class="nav-link link text-white display-7" href="proizvodstvo.html" aria-expanded="false">Производство <br>и технологии</a></li><li class="nav-item"><a class="nav-link link text-white display-7" href="отзывы.html" aria-expanded="false">Отзывы <br><br></a></li><li class="nav-item"><a class="nav-link link text-white display-7" href="https://agenyz.github.io/news.html" aria-expanded="false">Новости,&nbsp;<br>подарки</a></li>
                 <li class="nav-item"><a class="nav-link link text-white display-7" href="https://office.agenyz.com/?bonus=007-432703" target="_blank" aria-expanded="false">Регистрация &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a></li></ul>
             
@@ -62,7 +62,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.info/b">how to create a site</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.info/z">best website templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
