create github pages

--- a/news.html
+++ b/news.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build your own site</a></section><section class="cid-rKpyzc670f" id="image3-4u">
+<section class="engine"><a href="https://mobirise.info/f">simple site maker</a></section><section class="cid-rKpyzc670f" id="image3-4u">
 
     
 
